# router

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  ANTHROPIC_ROUTING_MARKER_PLAN.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  go.mod  go.sum
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  provider_request.yml
.github/workflows/: bump-workweave-pin.yml  check_cluster_routing.yml  check_migrations.yml  claude-issue-triage.yml  claude-review.yml  claude.yml  cluster_routing_ack.yml  comment_length_review.yml  provider-contract-refresh.yml  publish_cluster_routing.yml  publish_npm.yml  publish_npm_pi_router.yml  smoke.yml  stale.yml  test.yml  translation-fuzz.yml
cmd/: AGENTS.md  CLAUDE.md
cmd/genprices/: main.go  main_test.go
cmd/initdb/: main.go
cmd/router/: baseline_test.go  health_checker.go  hmm_capabilities.go  hmm_capabilities_test.go  hmm_roster_source.go  hmm_roster_source_test.go  main.go  model_id_map_test.go  policy_sidecar_auth.go  policy_sidecar_auth_test.go  policy_sidecars.go  policy_sidecars_test.go
cmd/routing-report/: main.go  main_test.go
cmd/seed/: main.go
db/: AGENTS.md  CLAUDE.md  sqlc.yml
db/init/: 00-create-schema.sql
db/migrations/: 0001_init.down.sql  0001_init.up.sql  0002_installation-excluded-models.down.sql  0002_rename_org_id_to_external_id.down.sql  0002_rename_org_id_to_external_id.up.sql  0003_add_external_api_keys.down.sql  0003_add_external_api_keys.up.sql  0003_session_pin_cache_stats.down.sql  0003_session_pin_cache_stats.up.sql  0004_drop_is_eval_allowlisted.down.sql  0004_drop_is_eval_allowlisted.up.sql  0004_installation_routing_alpha.down.sql  0004_installation_routing_alpha.up.sql  0004_multiple-api-keys-per-installation.down.sql  0004_multiple-api-keys-per-installation.up.sql  0005_session_pins.down.sql  0005_session_pins.up.sql  0005_telemetry-costs-to-micros.down.sql  0005_telemetry-costs-to-micros.up.sql  0006_add_model_router_users.down.sql  0006_add_model_router_users.up.sql  0006_add_request_telemetry.down.sql  0006_add_request_telemetry.up.sql  0006_credit_billing.down.sql  0006_credit_billing.up.sql  0006_expand_external_api_key_providers.down.sql  0006_expand_external_api_key_providers.up.sql  0007_router_user_identity.down.sql  0007_router_user_identity.up.sql  0007_single_active_key_per_installation.down.sql  0007_single_active_key_per_installation.up.sql  0007_user_display_name.down.sql  0007_user_display_name.up.sql  0008_add_openrouter_to_external_api_keys.down.sql  0008_add_openrouter_to_external_api_keys.up.sql  0008_ledger_memo.down.sql  0008_ledger_memo.up.sql  0009_add_fireworks_byok.up.sql  0009_session_pin_consecutive_upstream_errors.down.sql  0009_session_pin_consecutive_upstream_errors.up.sql  (+92 more)
db/pubsub/: entrypoint.sh
db/queries/: autopay.sql  billing.sql  cluster_model_lists.sql  (+14 more)
docs/: AGENTS.md  CLAUDE.md  CONFIGURATION.md  POLICY_ROUTER_HARNESS.md  README.md  SEMANTICS.md  SMOKE.md  TRANSLATION_COMPATIBILITY.md  router_caching_followups.md
eval/: .env.example  .gitignore  README.md  _env.py  aggregation.py  arena_score.py  compare.py  grade.py  grade_lcb.py  inference.py  manifest.py  merge_lcb.py  modal_app.py  pareto.py  pricing.py  pyproject.toml  reference.py  regrade.py  routerarena.py  routerbench.py  routing.py  rubric.py  slice_plan.py  spot_check.py  types.py
eval/benchmarks/: __init__.py  _hf.py  aider_polyglot.py  bfcl_v4.py  bird_sql.py  edge_cases.py  gpqa_diamond.py  gsm8k.py  humaneval_mbpp.py  jsonl_loader.py  livecodebench.py  mmlu.py  mt_bench.py  multilingual.py  swebench.py  tau_bench.py  xsum.py
eval/benchmarks/data/: edge_cases.jsonl
eval/judges/: __init__.py  ensemble.py  gemini.py  gpt5.py
eval/tests/: conftest.py  test_benchmark_loader.py  test_ensemble.py  test_pareto.py  test_reference.py  test_routing.py  test_rubric.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
install/: README.md  cc-statusline.sh  install.sh  spin  uninstall.sh
scripts/: .env.example  .gitignore  README.md  _env.py  bench_walker.py  compare_artifacts.py  diagnose_coverage.py  difficulty_judge.py  download_bench.sh  download_from_hf.py  dump_cluster_test_vector.py  embed_register_probes.py  export_qwen3_onnx.py  hf_files.py  holdout_eval.py  inspect_bench.py  pre-commit  pyproject.toml  repro-empty-response.sh  seed_dashboard_data.sql  simulate_routing.py  sweep_cluster_k.py  train_cluster_router.py  train_per_cluster_alpha.py
scripts/feedback_integration_check/: README.md  main.go
scripts/record_provider_fixtures/: README.md  main.go
scripts/rotate_key_race_check/: main.go
scripts/rotate_key_race_ext_check/: main.go
scripts/smoke/: run.sh
scripts/spend_reservation_check/: README.md  main.go
scripts/tenant_isolation_check/: README.md  main.go
scripts/tests/: test_ingest_aliases.py  test_ingest_bfcl_walk.py  test_ingest_swebench_walk.py
scripts/upsert_external_key_race_check/: main.go
sidecars/hmm/: AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
sidecars/hmm/hmm_sidecar/: __init__.py  api.py  artifacts.py  classifier.py  embeddings.py  features.py  hmm.py  policy.py  schemas.py
sidecars/hmm/scripts/: export_artifact.py  verify_artifact.py
sidecars/hmm/tests/: test_api.py  test_artifacts.py  test_embedding_contract.py  test_features.py  test_hmm.py  test_policy.py
smoke/: basic_test.go  boot_test.go  cache_test.go  harness_test.go  openai_test.go  request_builder_test.go  streaming_test.go
thoughts/: mimo-think-tag-plan.md
(+1064 files in other folders)
