[tool.poetry]
name = "router-eval"
version = "0.1.0"
description = "Phase 1a eval harness for the cluster routing project: 500-prompt cost-vs-quality Pareto vs heuristic / always-Opus / always-Sonnet / always-Haiku, judged by a GPT-5 + Gemini 2.5 Pro ensemble"
authors = ["Weave Team <engineering@workweave.ai>"]
readme = "README.md"
# Flat layout. The harness is a Modal app + a small CLI; it is not an
# installable library. Mirrors router/scripts/ conventions.
package-mode = false

[tool.poetry.dependencies]
# Pinned to match labeler/ + router/scripts/ + ~/.pyenv/version.
python = "3.12.3"

# Modal (orchestration) + httpx (router HTTP) + tenacity (retry).
modal = ">=0.78,<2.0"
httpx = "^0.27"
tenacity = "^9.0"

# LLM clients — direct Anthropic for inference, OpenAI + Google for the
# judge ensemble. Mirror labeler/'s provider choices so we don't
# inadvertently introduce a different SDK surface across the codebase.
anthropic = "^0.40"
openai = "^1.50"
google-genai = "^0.3"

# Token accounting (cost math).
tiktoken = "^0.7"

# Math / clustering / plotting / tabulation. scipy is needed for
# Cohen's kappa + Spearman; pandas keeps tabular output ergonomic.
numpy = ">=1.26,<3.0"
scipy = "^1.13"
pandas = "^2.2"
matplotlib = "^3.9"

# Typed JSONL row schemas. All harness rows go through pydantic so the
# Modal-side serialization, GCS round-trip, and aggregation share one
# truth.
pydantic = "^2.8"

# Storage + benchmark sources.
google-cloud-storage = "^2.18"
huggingface-hub = "^0.24"
datasets = "^3.0"

# .env auto-load (matches router/scripts/_env.py pattern).
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3"
pytest-asyncio = "^0.24"
respx = "^0.21"  # httpx mocking for routing.py tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
