[tool.poetry]
name = "router-scripts"
version = "0.1.0"
description = "Offline tooling for the router's cluster routing pipeline (OpenRouterBench → Jina v2 ONNX → centroids + rankings)"
authors = ["Weave Team <engineering@workweave.ai>"]
readme = "README.md"
# Flat layout — these are one-shot scripts, not an installable package.
package-mode = false

[tool.poetry.dependencies]
# Pinned to match labeler/ and ~/.pyenv/version. Python 3.13/3.14
# don't have wheels for some ML libs yet; pin to 3.12.
python = "3.12.3"

# HuggingFace + ONNX export
huggingface_hub = "^0.24"
# Auto-loads HF_TOKEN (and friends) from router/scripts/.env so
# contributors don't have to `export` it on every shell. The .env
# file itself is gitignored; .env.example is the committed template.
python-dotenv = "^1.0"
# optimum 2.x is required for torch ≥2.11: 1.x calls private symbols
# (e.g. torch.onnx.symbolic_opset14._attention_scale) that torch 2.11
# removed. The extras are unchanged.
optimum = {extras = ["exporters", "onnxruntime"], version = "^2.0"}
onnx = "^1.17"
onnxruntime = "^1.18"
# torch is pulled transitively by optimum during export. Note we use
# the default PyPI source (not pytorch-cpu like labeler/), because the
# pytorch-cpu index does NOT ship macOS wheels — it's Linux/Windows
# only. Since this pipeline runs exclusively on a dev box (typically
# Apple Silicon), the macOS wheel from PyPI is what we need; PyTorch's
# macOS wheels are CPU-only by default anyway, so we don't pay the
# ~2 GB CUDA tax. If we ever need to run this in CI on Linux, switch
# to a per-platform `torch = [...]` markers block.
torch = "^2.4"
transformers = "^4.44"

# Standalone tokenization (used by sweep/train/fixture scripts directly)
tokenizers = "^0.20"

# Clustering / numerics
numpy = ">=1.26,<3.0"
scikit-learn = "^1.5"

# Utility
safetensors = "^0.4"

# HuggingFace datasets — used by ingest.swebench to pull the SWE-bench
# Verified problem statements. Mirrors the version pin in
# router/eval/pyproject.toml so we don't ship two majors in the same
# subproject family.
datasets = "^3.0"

[tool.poetry.group.dev.dependencies]
# Optional dev tooling. Mirror labeler's selection so contributors
# don't have to learn a different setup per subdirectory.
black = "^25.1.0"
# pytest is needed by tests/ — fixture-driven unit tests for the
# ingest pipeline that don't require networking. Pinned to match
# router/eval/'s major.
pytest = "^8.3"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
